@@ -11,9 +11,11 @@ import java.util.Map;
 import org.safehaus.subutai.common.protocol.Agent;
 import org.safehaus.subutai.core.strategy.api.Criteria;
 import org.safehaus.subutai.core.strategy.api.ServerMetric;
+import org.safehaus.subutai.core.strategy.api.StrategyException;
 
 
-public class BestServerStrategy extends RoundRobinStrategy {
+public class BestServerStrategy extends RoundRobinStrategy
+{
     private List<Criteria> criteria = new ArrayList<Criteria>();
 
 
@@ -32,7 +34,7 @@ public class BestServerStrategy extends RoundRobinStrategy {
 
 
     @Override
-    protected List<Agent> sortServers( Map<Agent, ServerMetric> serverMetrics )
+    protected List<Agent> sortServers( Map<Agent, ServerMetric> serverMetrics ) throws StrategyException
     {
         // using each strategy criteria, grade servers one by one
         Map<Agent, Integer> grades = new HashMap<Agent, Integer>();
@@ -42,24 +44,17 @@ public class BestServerStrategy extends RoundRobinStrategy {
         }
         for ( Criteria sf : criteria )
         {
-            try
+            Agent a = getBestMatch( serverMetrics, MetricComparator.create( sf ) );
+            if ( a != null )
             {
-                Agent a = getBestMatch( serverMetrics, MetricComparator.create( sf ) );
-                if ( a != null )
-                {
-                    grades.put( a, grades.get( a ) + 1 );
-                }
-            }
-            catch ( Exception ex )
-            {
-                // comparator not defined for strategy
-                // TODO: log
+                incrementGrade( grades, a );
             }
         }
 
         // sort servers by their grades in decreasing order
-        ArrayList<Map.Entry<Agent, Integer>> ls = new ArrayList<Map.Entry<Agent, Integer>>( grades.entrySet() );
-        Collections.sort( ls, new Comparator<Map.Entry>() {
+        List<Map.Entry<Agent, Integer>> ls = new ArrayList<Map.Entry<Agent, Integer>>( grades.entrySet() );
+        Collections.sort( ls, new Comparator<Map.Entry>()
+        {
 
             @Override
             public int compare( Map.Entry o1, Map.Entry o2 )
@@ -79,12 +74,26 @@ public class BestServerStrategy extends RoundRobinStrategy {
     }
 
 
+    private void incrementGrade( Map<Agent, Integer> grades, Agent a )
+    {
+        for ( Map.Entry<Agent, Integer> entry : grades.entrySet() )
+        {
+            if ( entry.getKey().equals( a ) )
+            {
+                entry.setValue( entry.getValue() + 1 );
+                break;
+            }
+        }
+    }
+
+
     private Agent getBestMatch( Map<Agent, ServerMetric> serverMetrics, final MetricComparator mc )
     {
 
         List<Map.Entry<Agent, ServerMetric>> ls =
                 new ArrayList<Map.Entry<Agent, ServerMetric>>( serverMetrics.entrySet() );
-        Collections.sort( ls, new Comparator<Map.Entry>() {
+        Collections.sort( ls, new Comparator<Map.Entry>()
+        {
 
             @Override
             public int compare( Map.Entry o1, Map.Entry o2 )
@@ -110,14 +119,14 @@ public class BestServerStrategy extends RoundRobinStrategy {
     @Override
     public List<Criteria> getCriteria()
     {
-        List<Criteria> criteria = new ArrayList<Criteria>();
-        Criteria c = new Criteria( "MORE_HDD", "More HDD", new Boolean( false ) );
-        criteria.add( c );
-        c = new Criteria( "MORE_RAM", "More RAM", new Boolean( false ) );
-        criteria.add( c );
-        c = new Criteria( "MORE_CPU", "More CPU", new Boolean( false ) );
-        criteria.add( c );
+        List<Criteria> list = new ArrayList<Criteria>();
+        Criteria c = new Criteria( "MORE_HDD", "More HDD", Boolean.valueOf( false ) );
+        list.add( c );
+        c = new Criteria( "MORE_RAM", "More RAM", Boolean.valueOf( false ) );
+        list.add( c );
+        c = new Criteria( "MORE_CPU", "More CPU", Boolean.valueOf( false ) );
+        list.add( c );
 
-        return Collections.unmodifiableList( criteria );
+        return Collections.unmodifiableList( list );
     }
 }
